--- a/style.css
+++ b/style.css
@@ -95,12 +95,25 @@ header section .botonPortfolio{
   grid-template-rows: auto;
   grid-gap: 1.5rem;
   grid-template-areas:
-          'img1 img1 img4 img13'
-          'img5 img3 img3 img13'
+          'img15 img15 img16 img16'
+          'img19 img17 img17 img17'
+          'img18 img18 img18 img20'
+          'img21 img21 img22 img22'
+          'img23 img23 img24 img24'
+          'img25 img25 img26 img26'
+          'img27 img27 img28 img28'
+          'img32 img32 img30 img30'
+          'img31 img31 img33 img33'
+          'img34 img34 img29 img29'
+          'img35 img35 img36 img36'
+          'img3 img3 img4 img13'
+          'img5 img1 img1 img13'
           'img6 img6 img10 img10'
           'img2 img12 img12 img8'
           'img2 img9 img9 img11'
-          'img7 img7 img14 img14';
+          'img7 img7 img14 img14'
+
+          ;
 }
 
 .galeriaFotos a{
@@ -211,6 +224,138 @@ header section .botonPortfolio{
   grid-area: img14;
   min-height: 51.5rem;
   background-image: url("fotos/img14.jpg");
+}
+
+.img15{
+  grid-area: img15;
+  min-height: 51.5rem;
+  background-image: url("fotos/img15.jpg");
+}
+
+.img16{
+  grid-area: img16;
+  min-height: 51.5rem;
+  background-image: url("fotos/img16.jpg");
+}
+
+.img17{
+  grid-area: img17;
+  min-height: 51.5rem;
+  background-image: url("fotos/img17.jpg");
+}
+
+.img18{
+  grid-area: img18;
+  min-height: 51.5rem;
+  background-image: url("fotos/img18.jpg");
+}
+
+.img19{
+  grid-area: img19;
+  min-height: 51.5rem;
+  background-image: url("fotos/img19.jpg");
+}
+
+.img20{
+  grid-area: img20;
+  min-height: 51.5rem;
+  background-image: url("fotos/img20.jpg");
+}
+
+.img21{
+  grid-area: img21;
+  min-height: 51.5rem;
+  background-image: url("fotos/img21.jpg");
+}
+
+.img22{
+  grid-area: img22;
+  min-height: 51.5rem;
+  background-image: url("fotos/img22.jpg");
+}
+
+.img23{
+  grid-area: img23;
+  min-height: 51.5rem;
+  background-image: url("fotos/img23.jpg");
+}
+
+.img24{
+  grid-area: img24;
+  min-height: 51.5rem;
+  background-image: url("fotos/img24.jpg");
+}
+
+.img25{
+  grid-area: img25;
+  min-height: 51.5rem;
+  background-image: url("fotos/img25.jpg");
+}
+
+.img26{
+  grid-area: img26;
+  min-height: 51.5rem;
+  background-image: url("fotos/img26.jpg");
+}
+
+.img27{
+  grid-area: img27;
+  min-height: 51.5rem;
+  background-image: url("fotos/img27.jpg");
+}
+
+.img28{
+  grid-area: img28;
+  min-height: 51.5rem;
+  background-image: url("fotos/img28.jpg");
+}
+
+.img29{
+  grid-area: img29;
+  min-height: 51.5rem;
+  background-image: url("fotos/img29.jpg");
+}
+
+.img30{
+  grid-area: img30;
+  min-height: 51.5rem;
+  background-image: url("fotos/img30.jpg");
+}
+
+.img31{
+  grid-area: img31;
+  min-height: 51.5rem;
+  background-image: url("fotos/img31.jpg");
+}
+
+.img32{
+  grid-area: img32;
+  min-height: 51.5rem;
+  background-image: url("fotos/img32.jpg");
+}
+
+.img33{
+  grid-area: img33;
+  min-height: 51.5rem;
+  background-image: url("fotos/img33.jpg");
+}
+
+.img34{
+  grid-area: img34;
+  min-height: 51.5rem;
+  background-image: url("fotos/img34.jpg");
+}
+
+.img35{
+  grid-area: img35;
+  min-height: 51.5rem;
+  background-image: url("fotos/img35.jpg");
+}
+
+.img36{
+  grid-area: img36;
+  min-height: 51.5rem;
+  background-image: url("fotos/img36.jpg");
 }
 
 .imgx{
